acpc-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: acpc-site
  name: acpc-site
  namespace: acpc-pc2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acpc-site
  template:
    metadata:
      labels:
        app: acpc-site
    spec:
      containers:
      - image: wordpress
        name: wordpress
        ports:
        - name: pc2wtiport
          containerPort: 80
       - name: wp-content
         hostPath:
          path: /k8s/acpc-site-wp-content
