acpc-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-site
  name: test-site
  namespace: acpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-site
  template:
    metadata:
      labels:
        app: test-site
    spec:
      containers:
      - image: docker-registry.aast.edu/php-apache
        name: pointsweb
        ports:
        - name: pointswebport
          containerPort: 80
        volumeMounts:
        - mountPath: /points
          name: points-site       
      imagePullSecrets:
        - name: dockercred
      volumes:
        - name: points-site
          hostPath:
            path: /k8s/testsite
---
apiVersion: v1
kind: Service
metadata:
        name: test-site-service
        labels:
                run: test-site
        namespace: acpc
spec:
       type: ClusterIP
       ports:
               - targetPort: 80
                 port: 80
       selector:
               app: test-site
