tempsvc.yaml
apiVersion: v1
kind: Service
metadata:
        name: wti-tmp-servier
spec:
       type: NodePort
       ports:
               - targetPort: 8080
                 port: 8080
                 nodePort: 30080
       selector:
               app: pc2wti
