acpc-pc2.yaml
############### Manifest file to create pc2 server, pc2 wti, and pc2 judge from private registry.
######### The private registry cred must be stored in a generic security
###### For pc2 admin, connect to port  30002, change it 
###### Change WTI_PUBLICIP to your public ip
apiVersion: v1
kind: Namespace
metadata: 
 name: acpc-pc2
 labels: 
   name: acpc-pc2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pc2server
  name: pc2server
  namespace: acpc-pc2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pc2server
  template:
    metadata:
      labels:
        app: pc2server
    spec:
      containers:
      - image: docker-registry.aast.edu/acpcpc2:9_7
        name: pc2server
        ports:
        - name: pc2serverport
          containerPort: 50002
        volumeMounts:
                - mountPath: /profiles
                  name: pc2server-profiles
      ################################# Change the image pull secret to match your own 
      imagePullSecrets:
              - name: mylocalcred
      ################################ Change the mounting profiles directory (path)to match your own, mine is /k8s/pc2server-profiles
      volumes:
       - name: pc2server-profiles
         hostPath:
          path: /k8s/pc2server-profiles
---
apiVersion: v1
kind: Service
metadata:
        name: acpcpc2-nodeport
        namespace: acpc-pc2
spec:
      ######### Change the value of nodePort to match your requirments. The port must be free one.
       type: NodePort
       ports:
               - targetPort: 50002
                 port: 50002
                 nodePort: 30002
       selector:
               app: pc2server
---
apiVersion: v1
kind: Service
metadata:
        name: acpcpc2
        namespace: acpc-pc2
spec:
       type: ClusterIP
       ports:
               - targetPort: 50002
                 port: 50002
       selector:
               app: pc2server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pc2wti
  name: pc2wti
  namespace: acpc-pc2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pc2wti
  template:
    metadata:
      labels:
        app: pc2wti
    spec:
      containers:
      - image: docker-registry.aast.edu/acpcwti:9_7
        name: pc2wti
        ports:
        - name: pc2wtiport
          containerPort: 8080
        imagePullPolicy: Always
      imagePullSecrets:
              - name: mylocalcred
---
apiVersion: v1
kind: Service
metadata:
        name: acpcwti
        namespace: acpc-pc2
spec:
       type: ClusterIP
       ports:
               - targetPort: 8080
                 port: 8080
       selector:
               app: pc2wti
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: pc2wti-ingress-rule
 namespace: acpc-pc2
 #annotations:
 #kubernetes.io/ingress.class: "ingress-nginx"
spec:
 rules:
 - host:  testacpc.aast.edu
   http:
         paths: 
         - path: /login
           backend:
              serviceName: acpcwti
              servicePort: 8080
