acpc-points.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: acpc-points
  name: acpc-points
  namespace: acpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acpc-points
  template:
    metadata:
      labels:
        app: acpc-points
    spec:
      containers:
      - image: webdevops/php-apache
        name: pointsweb
        ports:
        - name: pointswebport
          containerPort: 80
        volumeMounts:
        - mountPath: /points
          name: points-site       
      volumes:
        - name: points-site
          hostPath:
            path: /k8s/points.acpc.global
---
apiVersion: v1
kind: Service
metadata:
        name: acpc-points-service
        labels:
                run: acpc-points
        namespace: acpc
spec:
       type: ClusterIP
       ports:
               - targetPort: 80
                 port: 80
       selector:
               app: acpc-points 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: acpcpointsir
 namespace: acpc
 annotations:
         kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host:  points.acpc.global
   http:
         paths:
         - path: /
           pathType: Prefix
           backend:
                   service:
                           name: acpc-points-service
                           port:
                                   number: 80
